[REFACTOR]refactor whole codebase and  split in core and deskstop